kubernetes/apps/default/renovate-ce/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-ce
spec:
  parentRefs:
  - name: external
    namespace: network
    sectionName: https
  hostnames:
  - renovate.${SECRET_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: renovate-ce
      port: 8080
